--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.multiplayer.widgets": "1.0.0-pre.2",
     "com.unity.netcode.gameobjects": "1.11.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.services.multiplay": "1.2.5",
     "com.unity.services.multiplayer": "1.0.0-pre.1",
